feat: 门票订单列表

--- a/pages/subpages/mine/order-center/subpages/scenic-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/scenic-order-list/subpages/order-detail/index.wxml
@@ -1,5 +1,5 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
-<wxs module="ORDER" src="../../../../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
 
 <view class="container">
   <view class="card">
@@ -11,23 +11,15 @@
       </view>
       <view class="shop-name omit single-line" wx:if="{{!orderInfo.shopId}}">官方自营</view>
     </view>
-    <goods-list list="{{orderInfo.goodsList}}" status="{{orderInfo.status}}" />
-    <view class="list row between">
-      <view class="title">商品总价</view>
-      <price-unit price="{{orderInfo.goodsPrice}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
-    </view>
-    <view class="list row between">
-      <view class="title">运费</view>
-      <price-unit price="{{orderInfo.freightPrice}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
-    </view>
+    <ticket-item ticketInfo="{{orderInfo.ticketInfo}}" />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
       <price-unit price="{{orderInfo.paymentAmount}}" />
     </view>
     <view class="more-info-wrap">
       <view class="list row top">
-        <view class="title">收货信息：</view>
-        <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}，{{orderInfo.address}}</view>
+        <view class="title">游客信息：</view>
+        <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}</view>
       </view>
       <view class="list row between">
         <view class="title">订单编号：</view>
@@ -45,10 +37,6 @@
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
-      <view class="list row between" wx:if="{{orderInfo.shipTime}}">
-        <view class="title">发货时间：</view>
-        <text>{{TIME.transform(orderInfo.shipTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.confirmTime}}">
         <view class="title">成交时间：</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -60,12 +48,7 @@
 <view class="bottom-bar">
   <button 
     class="btn" 
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="navToShipping" data-id="{{orderInfo.id}}"
-  >查看物流</button>
-  <button 
-    class="btn" 
-    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 401 || orderInfo.status === 402}}" 
+    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 301 || orderInfo.status === 302}}" 
     bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >删除订单</button>
   <button 
@@ -75,9 +58,9 @@
   >取消订单</button>
   <button 
     class="btn active"
-    wx:if="{{orderInfo.status === 301}}" 
+    wx:if="{{orderInfo.status === 201}}" 
     bindtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >确认收货</button>
+  >确认出行</button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 101}}" 
@@ -85,14 +68,19 @@
   >继续付款</button>
   <button 
     class="btn active" 
-    wx:if="{{orderInfo.status === 202}}"
+    wx:if="{{orderInfo.status === 201}}"
     bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >申请退款</button>
   <button 
     class="btn active" 
-    wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
+    wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" 
     bindtap="navToComment" data-id="{{orderInfo.id}}"
   >评价</button>
+  <button 
+    class="btn active" 
+    wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" 
+    bindtap="navToComment" data-id="{{orderInfo.id}}"
+  >申请售后</button>
   <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
 </view>
   
