--- a/pages/subpages/mine/merchant-center/subpages/scenic-management/components/order-list/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-management/components/order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
@@ -10,7 +10,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <goods-list list="{{item.goodsList}}" />
+      <ticket-item ticketInfo="{{item.ticketInfo}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
