--- a/pages/subpages/mall/hotel/components/hotel-item/index.wxml
+++ b/pages/subpages/mall/hotel/components/hotel-item/index.wxml
@@ -1,8 +1,8 @@
 <view class="hotel-item">
-  <image class="cover" src="http://img.ubo.vip/youlian/temporary/item_cover_4.jpg" />
+  <image class="cover" src="{{ item.cover }}" mode="aspectFill" lazy-load />
   <view class="content">
-    <view class="title omit">大岷山万松林滑雪场大岷山万松林滑雪场大岷山万松林滑雪场大岷山万松林滑雪场大岷山万松林滑雪场大岷山万松林滑雪场</view>
-    <view class="desc omit single-line">经济酒店 ｜ Bean Chantra</view>
+    <view class="title omit">{{ item.name }}</view>
+    <view class="desc omit single-line">{{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][item.grade - 1]}} ｜ {{item.englishName}} </view>
     <view class="data-wrap">
       <view class="score">4.2</view>
       <view class="other-data">
@@ -16,16 +16,15 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <text>杭州千岛湖，据您86km</text>
+      <text>{{item.address}}，据您{{distance}}km</text>
     </view>
     <view class="labels">
-      <view class="label">杭州亲子滑雪好去处</view>
-      <view class="label">5千平方米的戏雪区</view>
+      <view class="label" wx:for="{{item.featureTagList}}" wx:key="index" wx:for-item="tag">{{tag}}</view>
     </view>
     <view class="price-info">
       <view class="price">
         <text style="margin-right: 4rpx; color: #ff5049;">¥</text>
-        <text class="num" style="color: #ff5049; font-size: 32rpx;">200</text>
+        <text class="num" style="color: #ff5049; font-size: 32rpx;">{{item.price}}</text>
         <text style="margin-left: 2rpx;">起</text>
       </view>
     </view>
