--- a/pages/subpages/mall/goods/subpages/search/index.wxml
+++ b/pages/subpages/mall/goods/subpages/search/index.wxml
@@ -9,7 +9,7 @@
         value="{{keywords}}" bindinput="setKeywords" bindconfirm="search" 
         placeholder="请输入商品名称" type="text" confirm-type="search" 
       />
-      <view class="cancel-btn" wx:if="{{keywords != ''}}" bindtap="cancelSearch">
+      <view class="cancel-btn" wx:if="{{keywords}}" bindtap="cancelSearch">
         <image class="cancel-icon" src="https://img.ubo.vip/mp/search/clear-search.png" />
       </view>
       <button class="search-btn" bindtap="search">搜索</button>
