--- a/pages/subpages/mall/hotel/index.wxss
+++ b/pages/subpages/mall/hotel/index.wxss
@@ -20,15 +20,15 @@
 .search-bar {
   display: flex;
   align-items: center;
-  margin-left: 8px;
-  padding-left: 16px;
-  width: 220px;
+  margin-left: 16rpx;
+  padding-left: 32rpx;
+  width: 468rpx;
   height: 36px;
   border-radius: 18px;
   background: #f5f6f7;
 }
 .calendar-bar {
-  padding-right: 10px;
+  padding-right: 20rpx;
   border-right: 1px solid #e1e1e1;
 }
 .calendar-item {
@@ -43,83 +43,33 @@
   width: 16px;
   height: 16px;
 }
-.placeholder {
-  color: #999;
-  font-size: 14px;
+.search-input {
+  padding-left: 10rpx;
+  flex: 1;
+  height: 30px;
+  color: #333;
+  font-size: 26rpx;
 }
-
-.search-filter {
-  display: flex;
-  padding: 0 20px;
-  border-top: 1px solid #f5f6f8;
-}
-.filter-item {
+.cancel-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 1;
-  height: 44px;
-  color: #333;
-  font-size: 14px;
+  width: 60rpx;
+  height: 60rpx;
 }
-.filter-item.active {
-  font-weight: bold;
-}
-.filter-icon {
-  margin-left: 4px;
-  width: 10px;
-  height: 10px;
-  transform: rotate(0);
-  transition: transform .3s ease;
-}
-.filter-icon.active {
-  transform: rotate(180deg);
-  transition: transform .3s ease;
-}
-
-.mask {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 60;
-}
-.filter-options {
-  position: fixed;
-  width: 100%;
-  padding: 0 12px;
-  background: #fff;
-  transform: translateY(-100%);
-  transition: transform .3s ease;
-  z-index: 80;
-}
-.filter-options.show {
-  transform: translateY(0);
-  transition: transform .3s ease;
-}
-.option {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 50px;
-  border-bottom: 1px solid #f5f6f8;
-}
-.option:last-child {
-  border-bottom: none;
-}
-.option-name {
-  color: #333;
-  font-size: 13px;
-}
-.option-name.active {
-  font-weight: bold;
-}
-.selected-icon {
-  width: 16px;
-  height: 16px;
+.cancel-icon {
+  width: 32rpx;
+  height: 32rpx;
 }
 
 .hotel-list {
   padding: 0 28rpx;
   background: #fff;
+}
+
+.no-more-tips {
+  margin-top: 36rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
 }
