--- a/pages/subpages/mall/hotel/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/order-check/index.wxml
@@ -1,13 +1,13 @@
 <view class="container">
   <view class="ticket">
-    <view class="ticket-name">{{scenicPreOrderInfo.name}} {{scenicPreOrderInfo.categoryName}}</view>
+    <view class="ticket-name">{{hotelPreOrderInfo.name}} {{hotelPreOrderInfo.categoryName}}</view>
     <view class="split-line" />
     <view class="ticket-more">
       <view class="date-picker">
         <view class="date-picker-title">选择日期</view>
         <view class="date-picker-list row">
           <view 
-            class="date-picker-item {{curDateIdx === index ? 'active' : ''}} {{index === 0 && !scenicPreOrderInfo.todayBookable ? 'unvalid' : ''}}" 
+            class="date-picker-item {{curDateIdx === index ? 'active' : ''}} {{index === 0 && !hotelPreOrderInfo.todayBookable ? 'unvalid' : ''}}" 
             wx:for="{{recentlyDateList}}" 
             wx:key="index"
             bindtap="selectDate"
@@ -15,7 +15,7 @@
           >
             <view class="date">{{item.date}}</view>
             <block>
-              <view class="unvalid-tips" wx:if="{{index === 0 && !scenicPreOrderInfo.todayBookable}}">不可定</view>
+              <view class="unvalid-tips" wx:if="{{index === 0 && !hotelPreOrderInfo.todayBookable}}">不可定</view>
               <price-unit wx:else price="{{item.price}}" color="#333" fontSize="22rpx" integerFontSize="28rpx" />
             </block>
           </view>
@@ -30,7 +30,7 @@
       </view>
       <view class="count-control row between">
         <view class="count-control-title">购买数量</view>
-        <van-stepper value="{{ num }}" bind:change="numChange" max="{{scenicPreOrderInfo.limitNumber || 1}}" integer />
+        <van-stepper value="{{ num }}" bind:change="numChange" max="{{hotelPreOrderInfo.limitNumber || 1}}" integer />
       </view>
       <view class="ticket-tips">
         <view class="tips-wrap row">
@@ -39,12 +39,12 @@
         </view>
         <view class="tips-wrap row">
           <image class="tips-icon" src="./images/time.png" />
-          <view class="tips">{{scenicPreOrderInfo.effectiveTime ? ('出票' + scenicPreOrderInfo.effectiveTime + '小时后可用') : '出票后立即可用'}}</view>
+          <view class="tips">{{hotelPreOrderInfo.effectiveTime ? ('出票' + hotelPreOrderInfo.effectiveTime + '小时后可用') : '出票后立即可用'}}</view>
         </view>
         <view class="tips-wrap row" bindtap="showNoticePopup">
           <image class="tips-icon" src="./images/tips.png" />
-          <view class="tips stress">{{['随时可退', '有条件退', '不可退'][scenicPreOrderInfo.refundStatus - 1]}}</view>
-          <view class="tips" wx:if="{{!scenicPreOrderInfo.needExchange}}">无需换票</view>
+          <view class="tips stress">{{['随时可退', '有条件退', '不可退'][hotelPreOrderInfo.refundStatus - 1]}}</view>
+          <view class="tips" wx:if="{{!hotelPreOrderInfo.needExchange}}">无需换票</view>
           <view class="tips stress row">
             <text>预定须知</text>
             <image class="right-arrow" src="./images/more-blue.png" />
@@ -89,12 +89,12 @@
 
 <price-detail-popup 
   wx:if="{{priceDetailPopupVisible}}" 
-  category="{{scenicPreOrderInfo.categoryName}}" 
+  category="{{hotelPreOrderInfo.categoryName}}" 
   price="{{recentlyDateList[curDateIdx].price}}" 
   num="{{num}}" 
   bind:hide="togglePriceDetailPopupVisible" 
 />
-<notice-popup show="{{noticePopupVisible}}" info="{{scenicPreOrderInfo}}" bind:hide="hideNoticePopup" onlyCheck />
+<notice-popup show="{{noticePopupVisible}}" info="{{hotelPreOrderInfo}}" bind:hide="hideNoticePopup" onlyCheck />
 <van-calendar 
   show="{{ calendarPopupVisible }}"
   min-date="{{ minDate }}"
