--- a/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-image/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-image/index.wxml
@@ -1,1 +1,6 @@
-<image-grid wx:for="{{imagesList}}" wx:key="index" imageList="{{item}}" />
+<image-grid 
+  wx:for="{{imagesList}}" 
+  wx:key="index" 
+  imageList="{{item}}" 
+  title="{{menuList[index]}}" 
+/>
