--- a/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-image/components/image-grid/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-image/components/image-grid/index.wxml
@@ -1,10 +1,14 @@
-<view class="image-grid">
+<view class="image-grid {{ 'image-length-' + list.length }}">
   <image 
     class="image-item" 
-    wx:for="{{imageList}}" 
+    wx:for="{{list}}" 
     wx:key="index" 
     src="{{item}}" 
+    bindtap="previewImage"
+    data-current="{{item}}"
     mode="aspectFill" 
-    lazy-load 
+    lazy-load
   />
+  <view class="title">{{ title }}</view>
+  <view class="more-count" wx:if="{{moreCount}}" bindtap="previewMore">+{{ moreCount }}</view>
 </view>
