--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
@@ -190,25 +190,38 @@
   background: #fff;
   border-radius: 24rpx 24rpx 0 0;
 }
-.scenic-spot-name {
+.hotel-spot-name {
   color: #333;
   font-size: 38rpx;
   font-weight: bold;
 }
-.level-tag {
-  margin-left: 8rpx;
-  padding: 0 12rpx;
-  height: 32rpx;
-  color: #5dce86;
-  font-size: 20rpx;
+.hotel-score {
+  position: relative;
+  margin-left: 16rpx;
+  color: #333;
+  font-size: 32rpx;
   font-weight: bold;
-  line-height: 1;
-  border-radius: 8rpx;
-  background: #d1f7e5;
+  letter-spacing: -2rpx;
+}
+.hotel-score::after {
+  position: absolute;
+  left: 0;
+  bottom: 4rpx;
+  width: 100%;
+  height: 8rpx;
+  content: '';
+  background: #6097f7;
+  opacity: 0.6;
 }
 .share-icon {
   width: 42rpx;
   height: 42rpx;
+}
+.name-desc {
+  margin-top: 8rpx;
+  color: #333;
+  font-size: 26rpx;
+  font-weight: bold;
 }
 
 .score-wrap {
@@ -425,7 +438,7 @@
   height: 380rpx;
 }
 
-.scenic-spot-list {
+.hotel-spot-list {
   display: flex;
   flex-wrap: nowrap;
   margin-top: 24rpx;
