--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -20,7 +20,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <text>{{item.address}}，据您{{distance}}km</text>
+      <text>{{item.address}}，距您{{distance}}km</text>
     </view>
     <view class="price-info">
       <view class="sales">已售 13506</view>
