--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -1,7 +1,6 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <page-meta page-style="{{ noticePopupVisible ? 'overflow: hidden;' : '' }}" />
-
 <view class="nav-bar-wrap">
   <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
     <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{hotelInfo.cover}}" mode="aspectFill" />
@@ -13,22 +12,11 @@
       <view class="english-name">{{hotelInfo.englishName}}</view>
     </view>
   </view>
-
   <view class="menu-wrap row" wx:if="{{navBarVisible}}">
-    <scroll-view 
-      class="menu" 
-      scroll-left="{{curMenuIdx > 2 ? (curMenuIdx - 1) * 80 : 0}}" 
-      scroll-with-animation 
-      scroll-x 
-      enable-flex
-    >
-      <view 
-        class="menu-item row {{curMenuIdx === index ? 'active' : ''}}" 
-        wx:for="{{menuList}}"
-        wx:key="index"
-        bindtap="selectMenu"
-        data-index="{{index}}"
-      >{{item}}</view>
+    <scroll-view class="menu" scroll-left="{{curMenuIdx > 2 ? (curMenuIdx - 1) * 80 : 0}}" scroll-with-animation scroll-x enable-flex>
+      <view class="menu-item row {{curMenuIdx === index ? 'active' : ''}}" wx:for="{{menuList}}" wx:key="index" bindtap="selectMenu" data-index="{{index}}">
+        {{item}}
+      </view>
     </scroll-view>
     <button class="share-btn" hover-class="none">
       <image class="share-icon" src="./images/share.png" />
@@ -40,37 +28,20 @@
   <swiper style="height: 420rpx;" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
     <swiper-item wx:if="{{hotelInfo.video}}">
       <view class="video-wrap" bindtap="fullScreenPlay">
-        <video
-          class="video-player"
-          src="{{hotelInfo.video}}"
-          muted="{{muted}}"
-          autoplay
-          loop
-          controls="{{false}}"
-          show-center-play-btn="{{false}}" 
-          show-fullscreen-btn="{{false}}"
-        />
+        <video class="video-player" src="{{hotelInfo.video}}" muted="{{muted}}" autoplay loop controls="{{false}}" show-center-play-btn="{{false}}" show-fullscreen-btn="{{false}}" />
       </view>
     </swiper-item>
-    <swiper-item 
-      wx:for="{{imageList}}" 
-      wx:key="index" 
-      bindtap="checkMoreImage"
-    >
+    <swiper-item wx:for="{{imageList}}" wx:key="index" bindtap="checkMoreImage">
       <image style="width:100%; height:100%;" src="{{item}}" mode='aspectFill' lazy-load />
     </swiper-item>
   </swiper>
-  <view class="mute-icon-wrap row center" wx:if="{{video && curDot === 1}}" catchtap="toggleMuted">
+  <view class="mute-icon-wrap row center" wx:if="{{hotelInfo.video && curDot === 1}}" catchtap="toggleMuted">
     <image class="mute-icon" src="./images/{{muted ? 'muted' : 'unmuted'}}.png" />
   </view>
   <view class="banner-menu-list">
-    <view 
-      class="banner-menu-item {{ curDot === index + (video ? 1 : 0) ? 'active' : '' }}" 
-      wx:for="{{imageMenuList}}" 
-      wx:key="index"
-      catchtap="swiperBanner"
-      data-index="{{index}}"
-    >{{ item }}</view>
+    <view class="banner-menu-item {{ curDot === index + 1 ? 'active' : '' }}" wx:for="{{imageMenuList}}" wx:key="index" catchtap="swiperBanner" data-index="{{index}}">
+      {{ item }}
+    </view>
   </view>
   <view class="more-media row" catchtap="checkMoreImage">
     <image class="pic-icon" src="./images/photo.png" />
@@ -80,188 +51,197 @@
 </view>
 
 <view class="container">
-  <view class="row between">
-    <view class="row">
-      <view class="hotel-name">{{hotelInfo.name}}</view>
-      <view class="hotel-score">4.2</view>
-    </view>
-    <image class="share-icon" src="./images/share.png" />
-  </view>
-
-  <view class="name-desc omit single-line">{{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][hotelInfo.grade - 1]}} ｜ {{hotelInfo.englishName}} </view>
-
-  <view class="labels-wrap row" bindtap="checkMoreInfo">
-    <view class="labels">
-      <view class="label blue">{{TIME.transform(hotelInfo.openingYear, 'YYYY年开业')}}</view>
-      <view class="label blue" wx:if="{{hotelInfo.lastDecorationYear}}">{{TIME.transform(hotelInfo.lastDecorationYear, 'YYYY年装修')}}</view>
-      <view class="label" wx:for="{{hotelInfo.featureTagList}}" wx:key="index" wx:for-item="tag">{{tag}}</view>
-    </view>
-    <image class="more-icon" src="./images/more.png" />
-  </view>
-
-  <view class="position-info-wrap row top" bindtap="navigation">
-    <image class="position-bg" src="https://img.ubo.vip/tiddler/hotel/position-bg.jpg" />
-    <view class="position-info">
-      <view class="position">位于「国家森林公园」{{hotelInfo.address}}</view>
-      <view class="distance">距您{{distance}}km</view>
-    </view>
-    <view class="navigation-btn row">
-      <view>导航/周边</view>
-      <image class="more-icon" src="./images/more-white.png" />
-    </view>
-  </view>
-
-  <view class="condition-picker row between">
-    <view class="date-picker-wrap row">
-      <view class="date-picker row">
-        <view class="date">08月22日</view>
-        <view class="week">周二</view>
-        <view class="date-picker-type">入住日期</view>
+  <view class="content-wrap">
+    <view class="row between">
+      <view class="row">
+        <view class="hotel-name">{{hotelInfo.name}}</view>
+        <view class="hotel-score">4.2</view>
       </view>
-      <view class="night-num">1晚</view>
-      <view class="date-picker row">
-        <view class="date">08月23日</view>
-        <view class="week">周三</view>
-        <view class="date-picker-type">退房日期</view>
-      </view>
+      <image class="share-icon" src="./images/share.png" />
     </view>
-    <view class="tenant-picker row">2成人 0儿童</view>
-  </view>
-
-  <view class="content-title-wrap row between">
-    <view class="content-title">酒店房间</view>
-    <view class="content-title-tips row" wx:if="{{hotelInfo.policyList.length}}" bindtap="checkPolicy">
-      <text>优待政策</text>
-      <image class="more-icon" src="./images/more-blue.png" />
+    <view class="name-desc omit single-line">
+      {{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][hotelInfo.grade - 1]}} ｜ {{hotelInfo.englishName}}
     </view>
-  </view>
-  <scroll-view class="ticket-type-menu" scroll-x>
-    <view 
-      class="ticket-type-item {{curTicketTypeIdx === index ? 'active' : ''}}" 
-      wx:for="{{ticketTypeList}}" 
-      wx:key="index"
-      bindtap="selectTicketType"
-      data-index="{{index}}"
-    >{{item.name}}</view>
-  </scroll-view>
-  <view class="collapse">
-    <collapse-item 
-      wx:for="{{ticketList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}"
-      bind:toggleFold="toggleTicketsFold"
-      bind:showNoticePopup="showNoticePopup"
-    />
-  </view>
-  <empty-illus wx:if="{{!ticketTypeList.length}}" desc="暂无房间列表" height="520rpx" />
-
-  <view class="content-title-wrap" wx:if="{{combinedTicketTypeList.length}}">
-    <view class="content-title">酒店套餐</view>
-  </view>
-  <scroll-view class="ticket-type-menu" scroll-x wx:if="{{combinedTicketTypeList.length}}">
-    <view 
-      class="ticket-type-item {{curCombinedTicketTypeIdx === index ? 'active' : ''}}" 
-      wx:for="{{combinedTicketTypeList}}" 
-      wx:key="index"
-      bindtap="selectCombinedTicketType"
-      data-index="{{index}}"
-    >{{item}}</view>
-  </scroll-view>
-  <view class="collapse" wx:if="{{combinedTicketTypeList.length}}">
-    <collapse-item 
-      wx:for="{{combinedTicketList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}"
-      bind:toggleFold="toggleCombinedTicketsFold"
-      bind:showNoticePopup="showNoticePopup"
-      bind:booking="booking"
-    />
-  </view>
-
-  <view class="content-title-wrap">
-    <view class="content-title">用户点评</view>
-  </view>
-  <view class="comment-list">
-    <comment-item wx:for="{{commentList}}" wx:key="index" item="{{item}}" />
-  </view>
-  <view class="total-tips row center">
-    <text>共1000条点评</text>
-    <image class="more-icon" src="./images/more.png" />
-  </view>
-
-  <view class="content-title-wrap">
-    <view class="content-title">热门问答</view>
-  </view>
-  <view class="qa-list">
-    <view class="qa-item">
-      <view class="qa-question">千岛湖森林氧吧什么季节最适合去？</view>
-      <view class="answer-user row">
-        <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
-        <view class="answer-user-name">小绿女孩</view>
-      </view>
-      <view class="qa-answer omit single-line">建议5-9月份去呀～那时候森林氧吧是最好的时候了，我是去年的6月份去得，正值酷夏来临之前，天气偏暖，去森林氧吧，空气中都弥漫着大自然的味道</view>
-      <view class="qa-label">问</view>
-    </view>
-    <view class="qa-item">
-      <view class="qa-question">千岛湖森林氧吧需要玩多久？</view>
-      <view class="qa-answers row">
-        <view class="qa-answers-avatars row">
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+    <view class="labels-wrap row" bindtap="checkMoreInfo">
+      <view class="labels">
+        <view class="label blue">{{TIME.transform(hotelInfo.openingYear, 'YYYY年开业')}}</view>
+        <view class="label blue" wx:if="{{hotelInfo.lastDecorationYear}}">
+          {{TIME.transform(hotelInfo.lastDecorationYear, 'YYYY年装修')}}
         </view>
-        <view class="qa-answers-number">13人回答</view>
-      </view>
-      <view class="qa-label">问</view>
-    </view>
-    <view class="qa-item">
-      <view class="qa-question">千岛湖森林氧吧好玩吗？</view>
-      <view class="qa-answers row">
-        <view class="qa-answers-avatars row">
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
-          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+        <view class="label" wx:for="{{hotelInfo.featureTagList}}" wx:key="index" wx:for-item="tag">
+          {{tag}}
         </view>
-        <view class="qa-answers-number">4人回答</view>
       </view>
-      <view class="qa-label">问</view>
+      <image class="more-icon" src="./images/more.png" />
+    </view>
+    <view class="position-info-wrap row top" bindtap="navigation">
+      <image class="position-bg" src="https://img.ubo.vip/tiddler/hotel/position-bg.jpg" />
+      <view class="position-info">
+        <view class="position">位于「国家森林公园」{{hotelInfo.address}}</view>
+        <view class="distance">距您{{distance}}km</view>
+      </view>
+      <view class="navigation-btn row">
+        <view>导航/周边</view>
+        <image class="more-icon" src="./images/more-white.png" />
+      </view>
     </view>
   </view>
-  <view class="total-tips row center">
-    <text>共100条问答</text>
-    <image class="more-icon" src="./images/more.png" />
-  </view>
+  
+  <van-index-bar index-list="{{ [1, 2] }}" sticky-offset-top="{{ statusBarHeight + 88 }}">
+    <view>
+      <van-index-anchor index="1" use-slot>
+        <view class="condition-picker-wrap row center">
+          <view class="condition-picker row between">
+            <view class="date-picker-wrap row">
+              <view class="date-picker row">
+                <view class="date">08月22日</view>
+                <view class="week">周二</view>
+                <view class="date-picker-type">入住日期</view>
+              </view>
+              <view class="night-num">1晚</view>
+              <view class="date-picker row">
+                <view class="date">08月23日</view>
+                <view class="week">周三</view>
+                <view class="date-picker-type">退房日期</view>
+              </view>
+            </view>
+            <view class="tenant-picker row">2成人 0儿童</view>
+          </view>
+        </view>
+      </van-index-anchor>
 
-  <view class="content-title-wrap row between">
-    <view class="content-title">附近景点</view>
-    <view class="row">
-      <view class="more-detail">共10个推荐</view>
+      <view class="content-wrap">
+        <view class="content-title-wrap row between">
+          <view class="content-title">酒店房间</view>
+          <view class="content-title-tips row" wx:if="{{hotelInfo.policyList.length}}" bindtap="checkPolicy">
+            <text>优待政策</text>
+            <image class="more-icon" src="./images/more-blue.png" />
+          </view>
+        </view>
+        <scroll-view class="ticket-type-menu" scroll-x>
+          <view class="ticket-type-item {{curTicketTypeIdx === index ? 'active' : ''}}" wx:for="{{ticketTypeList}}" wx:key="index" bindtap="selectTicketType" data-index="{{index}}">
+            {{item.name}}
+          </view>
+        </scroll-view>
+        <view class="collapse">
+          <collapse-item wx:for="{{ticketList}}" wx:key="index" item="{{item}}" index="{{index}}" bind:toggleFold="toggleTicketsFold" bind:showNoticePopup="showNoticePopup" />
+        </view>
+        <empty-illus wx:if="{{!ticketTypeList.length}}" desc="暂无房间列表" height="520rpx" />
+      </view>
+
+      <view class="content-wrap">
+        <view class="content-title-wrap" wx:if="{{combinedTicketTypeList.length}}">
+          <view class="content-title">酒店套餐</view>
+        </view>
+        <scroll-view class="ticket-type-menu" scroll-x wx:if="{{combinedTicketTypeList.length}}">
+          <view class="ticket-type-item {{curCombinedTicketTypeIdx === index ? 'active' : ''}}" wx:for="{{combinedTicketTypeList}}" wx:key="index" bindtap="selectCombinedTicketType" data-index="{{index}}">
+            {{item}}
+          </view>
+        </scroll-view>
+        <view class="collapse" wx:if="{{combinedTicketTypeList.length}}">
+          <collapse-item wx:for="{{combinedTicketList}}" wx:key="index" item="{{item}}" index="{{index}}" bind:toggleFold="toggleCombinedTicketsFold" bind:showNoticePopup="showNoticePopup" bind:booking="booking" />
+        </view>
+      </view>
+    </view>
+    <view>
+      <van-index-anchor index="2"  use-slot />
+    </view>
+  </van-index-bar>
+
+  <view class="content-wrap">
+    <view class="content-title-wrap">
+      <view class="content-title">用户点评</view>
+    </view>
+    <view class="comment-list">
+      <comment-item wx:for="{{commentList}}" wx:key="index" item="{{item}}" />
+    </view>
+    <view class="total-tips row center">
+      <text>共1000条点评</text>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="hotel-hotel-list" scroll-x enable-flex>
-    <scenic-spot-item wx:for="{{nearbyScenicSpotList}}" wx:key="index" info="{{item}}" />
-  </scroll-view>
 
-  <view class="content-title-wrap row between">
-    <view class="content-title">附近酒店</view>
-    <view class="row">
-      <view class="more-detail">共10个推荐</view>
+  <view class="content-wrap">
+    <view class="content-title-wrap">
+      <view class="content-title">热门问答</view>
+    </view>
+    <view class="qa-list">
+      <view class="qa-item">
+        <view class="qa-question">千岛湖森林氧吧什么季节最适合去？</view>
+        <view class="answer-user row">
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+          <view class="answer-user-name">小绿女孩</view>
+        </view>
+        <view class="qa-answer omit single-line">
+          建议5-9月份去呀～那时候森林氧吧是最好的时候了，我是去年的6月份去得，正值酷夏来临之前，天气偏暖，去森林氧吧，空气中都弥漫着大自然的味道
+        </view>
+        <view class="qa-label">问</view>
+      </view>
+      <view class="qa-item">
+        <view class="qa-question">千岛湖森林氧吧需要玩多久？</view>
+        <view class="qa-answers row">
+          <view class="qa-answers-avatars row">
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+          </view>
+          <view class="qa-answers-number">13人回答</view>
+        </view>
+        <view class="qa-label">问</view>
+      </view>
+      <view class="qa-item">
+        <view class="qa-question">千岛湖森林氧吧好玩吗？</view>
+        <view class="qa-answers row">
+          <view class="qa-answers-avatars row">
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
+            <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+          </view>
+          <view class="qa-answers-number">4人回答</view>
+        </view>
+        <view class="qa-label">问</view>
+      </view>
+    </view>
+    <view class="total-tips row center">
+      <text>共100条问答</text>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="hotel-list" scroll-x enable-flex>
-    <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
-  </scroll-view>
 
-  <view class="content-title-wrap">
-    <view class="content-title">达人入住</view>
+  <view class="content-wrap">
+    <view class="content-title-wrap row between">
+      <view class="content-title">附近景点</view>
+      <view class="row">
+        <view class="more-detail">共10个推荐</view>
+        <image class="more-icon" src="./images/more.png" />
+      </view>
+    </view>
+    <scroll-view class="hotel-hotel-list" scroll-x enable-flex>
+      <scenic-spot-item wx:for="{{nearbyScenicSpotList}}" wx:key="index" info="{{item}}" />
+    </scroll-view>
   </view>
-  <view class="media-wrap">
-    <fall-flow list="{{mediaList}}" generic:item="media-item" />
-    <view class="no-more-tips">～没有更多了～</view>
+  
+  <view class="content-wrap">
+    <view class="content-title-wrap row between">
+      <view class="content-title">附近酒店</view>
+      <view class="row">
+        <view class="more-detail">共10个推荐</view>
+        <image class="more-icon" src="./images/more.png" />
+      </view>
+    </view>
+    <scroll-view class="hotel-list" scroll-x enable-flex>
+      <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
+    </scroll-view>
+  </view>
+
+  <view class="content-wrap">
+    <view class="content-title-wrap">
+      <view class="content-title">达人入住</view>
+    </view>
+    <view class="media-wrap">
+      <fall-flow list="{{mediaList}}" generic:item="media-item" />
+      <view class="no-more-tips">～没有更多了～</view>
+    </view>
   </view>
 </view>
 
