--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -92,7 +92,7 @@
       <van-index-anchor class="condition-picker-wrap-index-anchor" index="1" use-slot>
         <view class="condition-picker-wrap row center">
           <view class="condition-picker row between">
-            <view class="date-picker-wrap row">
+            <view class="date-picker-wrap row" bindtap="showCalendarPopup">
               <view class="date-picker row">
                 <view class="date">08月22日</view>
                 <view class="week">周二</view>
@@ -115,41 +115,137 @@
           <view class="content-title">酒店房间</view>
         </view>
       </view>
-      <van-index-bar index-list="{{ [1, 2, 3] }}" sticky-offset-top="{{ statusBarHeight + 148 }}">
-        <view>
-          <van-index-anchor index="1" use-slot>
-            <view class="room-type-item row">
-              <image class="room-img" src="{{ hotelInfo.cover }}" />
-              <view class="room-type-info">
-                <view class="room-type-name">标准双床房</view>
-                <view class="room-type-desc">2张单人床</view>
-                <view class="room-type-status">2个可定价格</view>
+      <view class="room-list-wrap">
+        <van-index-bar index-list="{{ [1, 2, 3] }}" sticky-offset-top="{{ statusBarHeight + 148 }}">
+          <view>
+            <van-index-anchor index="1" use-slot>
+              <view class="room-type-item row top">
+                <image class="room-img" src="{{ hotelInfo.cover }}" />
+                <view class="room-type-info">
+                  <view class="room-type-name">标准双床房</view>
+                  <view class="room-type-desc">2张单人床</view>
+                  <view class="room-type-status">2个可订价格</view>
+                </view>
+                <view class="price-wrap row">
+                  <price-unit price="{{hotelInfo.price || 0}}" isStartPrice />
+                  <image class="toggle-fold-icon" src="./images/down-btn-fill.png" />
+                </view>
               </view>
-              <price-unit class="room-base-price" price="{{hotelInfo.price || 0}}" isStartPrice />
+            </van-index-anchor>
+            <view class="room-list">
+              <view class="room-item">
+                <view class="room-info-wrap row">
+                  <view class="breakfast-status">2份早餐</view>
+                  <view class="room-info">双床</view>
+                  <view class="room-info">2人入住</view>
+                  <image class="more-icon" src="./images/more.png" />
+                </view>
+                <view class="cancellabel-status row">
+                  <image class="cancellabel-icon" src="./images/cancelable.png" />
+                  <view>8月16日16点前取消扣除10%手续费</view>
+                </view>
+                <view class="shop-name">来自酒店代理</view>
+                <view class="room-price-wrap row bottom">
+                  <price-unit price="{{hotelInfo.price || 0}}" />
+                  <view class="order-btn">
+                    <view class="order-btn-title">订</view>
+                    <view class="order-btn-desc">在线付</view>
+                  </view>
+                </view>
+              </view>
+              <view class="room-item">
+                <view class="room-info-wrap row">
+                  <view class="breakfast-status">2份早餐</view>
+                  <view class="room-info">双床</view>
+                  <view class="room-info">2人入住</view>
+                  <image class="more-icon" src="./images/more.png" />
+                </view>
+                <view class="cancellabel-status row">
+                  <image class="cancellabel-icon" src="./images/cancelable.png" />
+                  <view>8月16日16点前取消扣除10%手续费</view>
+                </view>
+                <view class="shop-name">来自酒店代理</view>
+                <view class="room-price-wrap row bottom">
+                  <price-unit price="{{hotelInfo.price || 0}}" />
+                  <view class="order-btn">
+                    <view class="order-btn-title">订</view>
+                    <view class="order-btn-desc">在线付</view>
+                  </view>
+                </view>
+              </view>
             </view>
-          </van-index-anchor>
-          <van-cell title="文本" />
-          <van-cell title="文本" />
-          <van-cell title="文本" />
-        </view>
-        <view>
-          <van-index-anchor index="2" use-slot>标题2</van-index-anchor>
-          <van-cell title="文本" />
-          <van-cell title="文本" />
-          <van-cell title="文本" />
-        </view>
-        <view>
-          <van-index-anchor index="3" use-slot />
-        </view>
-      </van-index-bar>
+          </view>
+          <view>
+            <van-index-anchor index="2" use-slot>
+              <view class="room-type-item row top">
+                <image class="room-img" src="{{ hotelInfo.cover }}" />
+                <view class="room-type-info">
+                  <view class="room-type-name">标准双床房</view>
+                  <view class="room-type-desc">2张单人床</view>
+                  <view class="room-type-status">2个可订价格</view>
+                </view>
+                <view class="price-wrap row">
+                  <price-unit price="{{hotelInfo.price || 0}}" isStartPrice />
+                  <image class="toggle-fold-icon" src="./images/down-btn-fill.png" />
+                </view>
+              </view>
+            </van-index-anchor>
+            <view class="room-list">
+              <view class="room-item">
+                <view class="room-info-wrap row">
+                  <view class="breakfast-status">2份早餐</view>
+                  <view class="room-info">双床</view>
+                  <view class="room-info">2人入住</view>
+                  <image class="more-icon" src="./images/more.png" />
+                </view>
+                <view class="cancellabel-status row">
+                  <image class="cancellabel-icon" src="./images/cancelable.png" />
+                  <view>8月16日16点前取消扣除10%手续费</view>
+                </view>
+                <view class="shop-name">来自酒店代理</view>
+                <view class="room-price-wrap row bottom">
+                  <price-unit price="{{hotelInfo.price || 0}}" />
+                  <view class="order-btn">
+                    <view class="order-btn-title">订</view>
+                    <view class="order-btn-desc">在线付</view>
+                  </view>
+                </view>
+              </view>
+              <view class="room-item">
+                <view class="room-info-wrap row">
+                  <view class="breakfast-status">2份早餐</view>
+                  <view class="room-info">双床</view>
+                  <view class="room-info">2人入住</view>
+                  <image class="more-icon" src="./images/more.png" />
+                </view>
+                <view class="cancellabel-status row">
+                  <image class="cancellabel-icon" src="./images/cancelable.png" />
+                  <view>8月16日16点前取消扣除10%手续费</view>
+                </view>
+                <view class="shop-name">来自酒店代理</view>
+                <view class="room-price-wrap row bottom">
+                  <price-unit price="{{hotelInfo.price || 0}}" />
+                  <view class="order-btn">
+                    <view class="order-btn-title">订</view>
+                    <view class="order-btn-desc">在线付</view>
+                  </view>
+                </view>
+              </view>
+            </view>
+          </view>
+          <view class="last-line">
+            <van-index-anchor index="3" use-slot />
+          </view>
+        </van-index-bar>
+      </view>
 
-      <view class="content-wrap">
-        <view class="content-title-wrap" wx:if="{{combinedTicketTypeList.length}}">
+      <view class="content-wrap" wx:if="{{combinedTicketTypeList.length}}">
+        <view class="content-title-wrap">
           <view class="content-title">酒店套餐</view>
         </view>
       </view>
     </view>
-    <view>
+    <view class="last-line">
       <van-index-anchor index="2"  use-slot />
     </view>
   </van-index-bar>
@@ -252,3 +348,12 @@
 </view>
 
 <notice-popup show="{{noticePopupVisible}}" info="{{curTicketInfo}}" bind:hide="hideNoticePopup" />
+
+<van-calendar 
+  show="{{calendarPopupVisibel}}" 
+  formatter="{{ formatter }}" 
+  bind:close="hideCalendarPopup" 
+  bind:confirm="setCalendar" 
+  type="range" 
+  color="#77a9fd" 
+/>
