--- a/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-info/index.wxss
@@ -37,7 +37,6 @@
   padding-bottom: calc(24rpx + env(safe-area-inset-bottom));
 }
 
-
 .card-title {
   margin-bottom: 24rpx;
   color: #333;
@@ -46,7 +45,7 @@
   line-height: 1;
 }
 .card {
-  margin-bottom: 48rpx;
+  margin-bottom: 32rpx;
   padding: 24rpx;
   background: #fff;
   border-radius: 18rpx;
@@ -89,6 +88,63 @@
   margin-top: 24rpx;
   color: #666;
   font-size: 24rpx;
+}
+
+.feature-item {
+  padding-top: 24rpx;
+  border-bottom: 1px solid #f5f6f7;
+}
+.feature-item:first-child {
+  padding-top: 0;
+}
+.feature-label, .policy-label {
+  width: 150rpx;
+  color: #333;
+  font-size: 26rpx;
+  font-weight: 550;
+}
+.feature-content-list {
+  flex-wrap: wrap;
+  flex: 1;
+}
+.feature-content {
+  margin-bottom: 24rpx;
+  width: 50%;
+  color: #666;
+  font-size: 26rpx;
+}
+
+.policy-item {
+  padding: 24rpx 0;
+  border-bottom: 1px solid #f5f6f7;
+}
+.policy-item:first-child {
+  padding-top: 0;
+}
+.policy-label {
+  color: #333;
+  font-size: 26rpx;
+  font-weight: 550;
+}
+.policy-content-list {
+  margin-top: 12rpx;
+}
+.policy-content {
+  position: relative;
+  margin-top: 12rpx;
+  padding-left: 18rpx;
+  color: #666;
+  font-size: 24rpx;
+}
+.policy-content::after {
+  position: absolute;
+  left: 0;
+  top: 14rpx;
+  width: 8rpx;
+  height: 8rpx;
+  content: '';
+  background: #999;
+  border-radius: 50%;
 }
 
 .warning-tips {
