feat: 酒店服务商入驻

--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -11,10 +11,10 @@
 
 <view class="list-wrap">
   <view class="list row between" bindtap="navToScenicProviderSettleIn">
-    <view class="title">景区服务商入驻</view>
+    <view class="title">景区入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
-  <view class="list row between" bindtap="navToMerchantSettleIn">
+  <view class="list row between" bindtap="navToHotelProviderSettleIn">
     <view class="title">酒店入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
